[package]
name = "optimize-cmp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []

[dependencies]
solana-program = "2.0"
light-zero-copy = { version = "0.2.0", features = ["std"] }
zerocopy = { version = "0.8", features = ["derive"] }

[dev-dependencies]
mollusk-svm = "0.3"
mollusk-svm-bencher = "0.3"
solana-logger = "2.0"

[[bench]]
name = "compute_units"
harness = false

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
